--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-/Users/patrickserrano/Library/Application\ Support/Sublime\ Text\ 3/Packages/User/Package\ Control.cache 
+/Users/patrickserrano/Library/Application\ Support/Sublime\ Text\ 3/Packages/User/Package\ Control.cache/
+.DS_Store
